# LiterateLB

./: CMakeLists.txt  assets.cmake  default.nix  lbm.org  org.css  sources.bib
tangle/: benchmark-ldc.cu  channel-with-sphere.cu  channel.cu  ldc-2d.cu  ldc-3d.cu  magnus.cu  nozzle.cu  taylor-couette.cu
tangle/LLBM/: base.h  boundary.h  bulk.h  call_tag.h  descriptor.h  lattice.h  materials.h  memory.h  operator.h  propagate.h  sdf.h  sdf_boundary.h  volumetric.h  wall.h
tangle/LLBM/kernel/: bounce_back.h  bounce_back_moving_wall.h  bouzidi.h  collect_curl.h  collect_moments.h  collect_q_criterion.h  collect_shear_layer_normal.h  collect_streamlines.h  collect_velocity_norm.h  collide.h  equilibrium_density_wall.h  equilibrium_velocity_wall.h  executor.h  free_slip.h  initialize.h  propagate.h  smagorinsky_collide.h
tangle/asset/shader/: blur.frag
tangle/sampler/: curl_norm.h  q_criterion.h  sampler.h  shear_layer.h  velocity_norm.h
tangle/util/: camera.h  colormap.h  noise.h  render_window.h  texture.h  timer.h  volumetric_example.h
